Added comments that findbugs warnings must not be fixed - the use of Long(...) constructor is intended and valid
svn path=/trunk/; revision=4089


Former-commit-id: fd15a76473aa40c84fd750ab2a8d75e9648fe48d